# wschat

./: CHANGES.md  LICENSE  README.md  default.nix  wschat.cabal  wschat.nix
examples/: example.js  index.html
src/: Main.hs
